<resources>
    <string name="app_name">Examen</string>

    <!--Inicio de sesion-->
    <string name="prompt_email">Correo</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Iniciar Sesión</string>
    <string name="error_campo_requerido">Este campo es requerido</string>
    <string name="error_correo_invalido">Este correo es invalido</string>
    <string name="error_contra_invalida">Esta contraseña es muy corta</string>

    <!--Listado-->
    <string-array name="country_arrays">
        <item>Fecha de publicación</item>
        <item>Fecha de evento</item>
        <item>Título</item>
    </string-array>
    <string name="ordenar">Ordenar por:</string>
    <string name="anterior">Anterior</string>
    <string name="siguiente">Siguiente</string>
    <string name="icono_ordenar_descripcion">Ordenar</string>
    <string name="paginacion">Página 1 de 5</string>
    <string name="buscar">Buscar</string>

    <!--Item-->
    <string name="inicial">T</string>
    <string name="titulo">Título: </string>
    <string name="descripcion">Descripción: </string>
    <string name="fecha_publicacion">Fecha de la publicación: </string>
    <string name="fecha_evento">Fecha del evento: </string>

    <!--Publicar anuncio-->
    <string name="titulo_anuncio">Publicar Anuncio</string>
    <string name="fecha">Fecha</string>
    <string name="hora">Hora</string>
    <string name="publicar">Publicar Anuncio</string>
    <string name="error_fecha_formato_invalido">Formato erróneo DD/MM/AA</string>
    <string name="error_hora_formato_invalido">Formato erróneo HH:MM</string>

    <!--Detalle anuncio-->
    <string name="autor">Autor Publicación</string>
    <string name="correo">Correo Autor</string>
    <string name="creacion">Fecha de Publicación</string>
    <string name="editar">Modificar</string>
    <string name="eliminar">Eliminar</string>

    <!--Modificar anuncio-->
    <string name="modificar_anuncio">Modificar Anuncio</string>
</resources>
