<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Activitys.DetalleAnuncioActivity">
        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
                <TextView
                    android:id="@+id/tvTitulo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/item_margin"
                    android:text="@string/titulo"
                    android:textAlignment="center"
                    android:textSize="24sp"/>

                <TextView
                    android:id="@+id/tvDescripcion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/descripcion"
                    android:justificationMode="inter_word"
                    android:textSize="18sp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/item_margin"
                android:layout_marginBottom="30dp"
                android:weightSum="2"
                android:gravity="left"
                android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvFecha"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fecha"
                        android:singleLine="true"
                        android:textSize="16sp"/>

                    <TextView
                        android:id="@+id/tvHora"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hora"
                        android:singleLine="true"
                        android:textSize="16sp"/>

            </LinearLayout>
            <TextView
                android:id="@+id/tvAutor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/autor"
                android:singleLine="true" />
            <TextView
                android:id="@+id/tvCorreo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/correo"
                android:singleLine="true" />
            <TextView
                android:id="@+id/tvCreacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/creacion"
                android:singleLine="true" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:gravity="center"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnEditar"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginRight="@dimen/item_margin"
                    android:text="@string/editar"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btnEliminar"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="@dimen/item_margin"
                    android:text="@string/eliminar"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>
</LinearLayout>