<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp">
    <TextView
        android:id="@+id/tvIcon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_drawable"
        android:gravity="center"
        android:text="@string/inicial"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@+id/tvIcon"
        android:layout_toRightOf="@+id/tvIcon"
        android:text="@string/titulo"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/descripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/titulo"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@+id/tvIcon"
        android:layout_toRightOf="@+id/tvIcon"
        android:text="@string/descripcion"
        android:textSize="15sp"
        android:ellipsize="end"
        android:maxLines="1"/>

    <TextView
        android:id="@+id/fecha_evento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/descripcion"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@+id/tvIcon"
        android:layout_toRightOf="@+id/tvIcon"
        android:text="@string/fecha_evento"
        android:textSize="12sp"/>
    <TextView
        android:id="@+id/fecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/titulo"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:text="@string/fecha_publicacion"
        android:textSize="12sp"
        tools:ignore="RelativeOverlap" />

</RelativeLayout>