<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Activitys.CrearAnuncioActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulo_anuncio"
        android:textAlignment="center"
        android:layout_gravity="top"
        android:layout_marginBottom="15sp"
        android:textSize="30sp"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">
        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/etTitulo_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextInputLayout"
                app:counterEnabled="true"
                app:counterMaxLength="20">

                <EditText
                    android:id="@+id/etTitulo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/titulo"
                    android:inputType="textCapWords"
                    android:singleLine="true"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/etDescripcion_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextInputLayout"
                app:counterEnabled="true"
                app:counterMaxLength="400">
                <EditText
                    android:id="@+id/etDescripcion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/descripcion"
                    android:inputType="textMultiLine"
                    android:lines="6"
                    android:gravity="start"
                    android:justificationMode="inter_word"/>

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:gravity="center"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/etFecha_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/item_margin"
                    android:layout_marginEnd="@dimen/item_margin"
                    android:layout_weight="1"
                    style="@style/TextInputLayout">

                    <EditText
                        android:id="@+id/etFecha"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/fecha"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/etHora_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/item_margin"
                    android:layout_marginStart="@dimen/item_margin"
                    android:layout_weight="1"
                    style="@style/TextInputLayout">

                    <EditText
                        android:id="@+id/etHora"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hora"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <Button
                android:id="@+id/btnPublicar"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/publicar"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>